<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >



        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/id"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/id"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/price"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="70dp"
                    android:gravity="right" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/unit"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="70dp"
                    android:gravity="right" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/insert"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/insert" />

            <Button
                android:id="@+id/update"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/update" />

            <Button
                android:id="@+id/delete"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <Button
                android:id="@+id/select"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/view" />
        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:layout_marginTop="30dp" >

            <TableLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </TableLayout>
        </ScrollView>


</LinearLayout>